--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
 
     <edu.hrbeu.ice.mywatchdemo.MyWatch
         android:id="@+id/wat"
-        android:layout_width="284dp"
-        android:layout_height="160dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
 
         />
@@ -31,8 +31,8 @@
         android:id="@+id/msw"
         app:radius="50dp"
         app:name="soc"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_below="@id/btn"
         app:total="100"
         app:unit="%"
