--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
 
     <declare-styleable name="MyWatch">
         <attr name="speed" format="integer" />
+        <attr name="radius" />
     </declare-styleable>
 
 
